# tortoise-orm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTORS.rst  Dockerfile.python_pip  Dockerfile.tortoise_poetry  Makefile  README.rst  conftest.py  pyproject.toml
.github/workflows/: ci.yml  codspeed.yml  gh-pages-release.yml  gh-pages.yml  pypi.yml
docs/: CONTRIBUTING.rst  cli.rst  conf.py  connections.rst  databases.rst  direct_queries.rst  expressions.rst  fields.rst  functions.rst  getting_started.rst  index.rst  indexes.rst  migration.rst  migration_guide.rst  models.rst  query.rst  reference.rst  roadmap.rst  router.rst  schema.rst  setup.rst  sphinx_autodoc_typehints.py  timezone.rst  toc.rst  type_globals.py
docs/contrib/: fastapi.rst  postgres.rst  unittest.rst
docs/examples/: fastapi.rst  pydantic.rst
examples/: basic.py  basic_comments.py  complex_filtering.py  complex_prefetching.py  enum_fields.py  functions.py  global_table_name_generator.py  group_by.py  postgres_full_text_search.py  relations.py  relations_recursive.py  relations_with_unique.py  router.py  schema_create.py  signals.py  transactions.py
examples/blacksheep/: _tests.py  server.py
examples/comprehensive_migrations_project/: README.rst  config.py  models.py
examples/comprehensive_migrations_project/migrations/: 0001_initial_schema.py  0002_add_product_catalog.py  0003_add_product_fields.py  0004_add_order_system.py  0005_add_enhancement_fields.py  0006_alter_field_types.py  0007_auto_20260206_0021.py  0008_auto_20260206_0025.py  0009_rename_fields.py  0010_add_computed_fields.py  0011_populate_computed_fields.py  0012_require_computed_fields.py  0013_add_indexes.py  0014_remove_unused_indexes.py  0015_add_audit_log_remove_index.py  0016_delete_audit_log.py  0017_create_bad_sorted_fk.py  0018_add_db_defaults.py  0019_change_db_default.py  0020_drop_db_default.py  0021_add_sql_default_expressions.py  0022_add_employee_constraints.py  0023_drop_employee_constraints.py  0024_auto_20260216_1715.py  0025_auto_20260216_1716.py
examples/fastapi/: README.rst  _tests.py  _tests_await_register.py  _tests_register_tortoise.py  config.py  main.py  main_await_register.py  main_custom_timezone.py  main_register_tortoise.py  routers.py  schemas.py  views.py
examples/fastapi/migrations/: 0001_initial.py
examples/migrations_project/: README.rst  models.py  settings.py
examples/migrations_project/migrations/: 0001_initial.py  0002_auto_20260124_1650.py  0013_add_post_summary.py  (+11 more)
examples/multiapp_migrations_project/: settings.py
examples/pydantic/: basic.py  computed_fields.py  early_init.py  tutorial_3.py  tutorial_4.py
examples/pytest/: conftest.py  models.py  test_example.py
examples/sanic/: _tests.py  main.py
examples/schema_migrations_project/: README.md  models.py  settings.py
examples/starlette/: _tests.py  main.py  models.py
tests/: run_parallel.py  test_aggregation.py  test_basic.py  test_bulk.py  test_callable_default.py  test_case_when.py  test_concurrency.py  test_config.py  test_connection.py  test_context.py  test_datetime_field_bug.py  test_datetime_migration_integration.py  test_db_default_insert.py  test_default.py  test_early_init.py  test_f.py  test_filtering.py  test_filters.py  test_fuzz.py  test_group_by.py  test_inheritance.py  test_issue_404.py  test_latest_earliest.py  test_manager.py  test_manual_sql.py  test_model_construct.py  test_model_field_name_conflicts.py  test_model_get_table.py  test_model_methods.py  test_only.py  test_order_by.py  test_order_by_nested.py  test_posix_regex_filter.py  test_prefetching.py  test_primary_key.py  test_q.py  test_query_api.py  test_queryset.py  test_queryset_reuse.py  test_relations.py  (+15 more)
tests/backends/: test_capabilities.py  test_connection_params.py  test_db_url.py  test_explain.py  test_mysql.py  test_postgres.py  test_reconnect.py
tests/benchmarks/: conftest.py  test_bulk_create.py  test_create.py  test_expressions.py  test_field_attribute_lookup.py  test_filter.py  test_get.py  test_hydration.py  test_relations.py  test_state_building.py  test_update.py
tests/cli/: conftest.py  test_cli.py  test_utils.py
tests/contrib/: test_decorator.py  test_fastapi.py  test_functions.py  test_pydantic.py
tests/fields/: conftest.py  subclass_fields.py  test_array.py  test_binary.py  test_bool.py  test_char.py  test_common.py  test_db_default.py  test_db_index.py  test_decimal.py  test_enum.py  test_fk.py  test_fk_uuid.py  test_fk_with_unique.py  test_float.py  test_int.py  test_json.py  test_m2m.py  test_m2m_uuid.py  test_o2o_with_unique.py  test_subclass.py  test_subclass_filters.py  test_text.py  test_time.py  test_uuid.py  type_checks.py
tests/migrations/: __init__.py  conftest.py  test_autodetector.py  test_migrate_api.py  test_operations_database.py  test_operations_real_db.py  test_operations_rename_model_state.py  test_operations_state.py  test_recorder.py  test_runtime_migrations.py  test_schema_editor_backend_parity.py  test_schema_editor_backends.py  test_schema_editor_constraints.py  test_schema_editor_mssql.py  test_schema_editor_sql.py  test_schema_editor_sqlite.py  test_schema_qualified_migrations.py  test_state_diff_operations.py  test_state_generator.py  test_state_performance.py  test_writer.py
tests/model_setup/: model_bad_rel2.py  test__models__.py  test_bad_relation_reference.py  test_init.py
tests/schema/: models_fk_1.py  models_m2m_2.py  models_postgres_fields.py  models_postgres_index.py  models_schema_qualified.py  test_generate_schema.py
tests/utils/: fake_client.py  test_describe_model.py  test_run_async.py
tortoise/: __init__.py  apps.py  config.py  connection.py  context.py  converters.py  expressions.py  filters.py  indexes.py  models.py  query_api.py  query_utils.py  queryset.py  timezone.py  transactions.py  utils.py  validators.py
tortoise/cli/: cli.py  utils.py
tortoise/fields/: __init__.py  base.py  data.py  db_defaults.py  relational.py
tortoise/migrations/: __init__.py  constraints.py  executor.py  expressions.py  migration.py  operations.py  recorder.py  writer.py
(+65 files in other folders)
